--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,6 +15,12 @@ suites:
 - name: mongod-recipe
   run_list:
     - recipe[hipsnip-mongodb_test::mongod_recipe]
+    - recipe[minitest-handler]
 - name: mongod-lwrp
   run_list:
     - recipe[hipsnip-mongodb_test::mongod_lwrp]
+    - recipe[minitest-handler]
+- name: replicaset-lwrp
+  run_list:
+    - recipe[hipsnip-mongodb_test::replica_set_lwrp]
+    - recipe[minitest-handler]
