--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,9 +3,9 @@ driver_plugin: vagrant
 platforms:
 - name: ubuntu-12.04
   driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_chef-11.2.0.box
-    require_chef_omnibus: 11.4.0
+    box: opscode-ubuntu-12.04-nochef
+    box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
+    require_chef_omnibus: 11.4.4
     customize:
       cpus: 2
       memory: 1024
