--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,15 +1,18 @@
 ---
-driver_plugin: vagrant
-driver_config:
+driver:
+  name: vagrant
   customize:
     memory: 1024
+
+provisioner:
+  name: chef_solo
 
 platforms:
 - name: ubuntu-12.04
   driver_config:
     box: opscode-ubuntu-12.04-nochef
     box_url: https://opscode-vm.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
-    require_chef_omnibus: 11.6.0
+    require_chef_omnibus: 11.10.0
   run_list:
   - recipe[apt]
 
@@ -17,12 +20,9 @@ suites:
 - name: mongod-recipe
   run_list:
     - recipe[hipsnip-mongodb_test::mongod_recipe]
-    - recipe[minitest-handler]
 - name: mongod-lwrp
   run_list:
     - recipe[hipsnip-mongodb_test::mongod_lwrp]
-    - recipe[minitest-handler]
 - name: replicaset-lwrp
   run_list:
     - recipe[hipsnip-mongodb_test::replica_set_lwrp]
-    - recipe[minitest-handler]
