--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,6 +4,8 @@ driver:
   require_chef_omnibus: 11.10.0
   customize:
     memory: 1024
+    natdnshostresolver1: "on"
+    natdnsproxy1: "on"
 
 provisioner:
   name: chef_solo
